hero section designed for mobile devices

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h2><span class="span-empowering">Empowering</span> <br>
                 students from small <br>
                 age <span class="span-towards">towards vision</span></h2>
-            <p>With the courage, Confidence, Creativity and Compassion to make <br>
+            <p>With the courage, Confidence, Creativity and Compassion to make <br class="hero-p-br">
                 their Unique Contribution in a Diverse and Dynamic World.</p>
-            <button class="button-2">Enroll Now</button>
+            <div class="hero-button"><button class="button-2">Enroll Now</button></div>
         </div>
 
         <div class="hero-image">
