added standard curriculum section and designed for bigger screen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="hamburger">
-            <img src="assets/2311531.png" alt="">
+            <img src="assets/hamburger.png" alt="">
         </div>
     </header>
 
@@ -42,19 +42,79 @@
 
     <!-- Hero section -->
 
-    <main class="hero-section">
-        <div class="hero-text">
-            <h2><span class="span-empowering">Empowering</span> <br>
-                students from small <br>
-                age <span class="span-towards">towards vision</span></h2>
-            <p>With the courage, Confidence, Creativity and Compassion to make <br class="hero-p-br">
-                their Unique Contribution in a Diverse and Dynamic World.</p>
-            <div class="hero-button"><button class="button-2">Enroll Now</button></div>
+    <main>
+        <div class="hero-section">
+            <div class="hero-text">
+                <h2><span class="span-empowering">Empowering</span> <br>
+                    students from small <br>
+                    age <span class="span-towards">towards vision</span></h2>
+                <p>With the courage, Confidence, Creativity and Compassion to make <br class="hero-p-br">
+                    their Unique Contribution in a Diverse and Dynamic World.</p>
+                <div class="hero-button"><button class="button-2">Enroll Now</button></div>
+            </div>
+    
+            <div class="hero-image">
+                <img src="assets/hero-kids.png" alt="loading">
+            </div>
         </div>
 
-        <div class="hero-image">
-            <img src="assets/hero-kids.png" alt="">
-        </div>
+        <!-- Standard Curriculum Section -->
+
+        <section class="standard-curriculum">
+            <h1>Standard Curriculum</h1>
+
+            <!-- Card Container -->
+
+            <div class="curriculum-card-container">
+
+                <!-- Card 1 -->
+
+                <div class="curriculum-card card-1">
+
+                    <img src="assets/kinder.png" alt="">
+
+                    <h3>Kinder (3-6) Years</h3>
+
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+
+                        <a href="#">Read More</a>
+                </div>
+
+                <!-- Card 2 -->
+
+                <div class="curriculum-card card-2">
+
+                    <img src="assets/middle.png" alt="">
+
+                    <h3>Middle (10-16) Years</h3>
+
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+
+                        <a href="#">Read More</a>
+                </div>
+
+                <!-- Card 3 -->
+
+                <div class="curriculum-card card-3">
+
+                    <img src="assets/elementary.png" alt="">
+
+                    <h3>Elementary School</h3>
+
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+
+                        <a href="#">Read More</a>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 </body>
 
