added curriculum design for mobile screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!-- Attached Css file -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Fontawsome cdn link -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 <body>
@@ -113,7 +117,12 @@
                 </div>
 
             </div>
-
+    
+            <!-- curriculum arrow link -->
+            <div class="curriculum-arrow"> 
+            <i class="fa-solid fa-angle-left"></i>
+            <i class="fa-solid fa-chevron-right"></i>
+            </div>
         </section>
     </main>
 </body>
