--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     their Unique Contribution in a Diverse and Dynamic World.</p>
                 <div class="hero-button"><button class="button-2">Enroll Now</button></div>
             </div>
-    
+
             <div class="hero-image">
                 <img src="assets/hero-kids.png" alt="loading">
             </div>
@@ -64,64 +64,181 @@
 
         <!-- Standard Curriculum Section -->
 
-        <section class="standard-curriculum">
-            <h1>Standard Curriculum</h1>
+        <section class="main-curriculum-section">
+            <div class="standard-curriculum">
+                <h1>Standard Curriculum</h1>
 
-            <!-- Card Container -->
+                <!-- Card Container -->
 
-            <div class="curriculum-card-container">
+                <div class="curriculum-card-container">
 
-                <!-- Card 1 -->
+                    <!-- Card 1 -->
 
-                <div class="curriculum-card card-1">
+                    <div class="curriculum-card card-1">
 
-                    <img src="assets/kinder.png" alt="">
+                        <img src="assets/kinder.png" alt="">
 
-                    <h3>Kinder (3-6) Years</h3>
+                        <h3>Kinder (3-6) Years</h3>
 
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
-
-                        <a href="#">Read More</a>
-                </div>
-
-                <!-- Card 2 -->
-
-                <div class="curriculum-card card-2">
-
-                    <img src="assets/middle.png" alt="">
-
-                    <h3>Middle (10-16) Years</h3>
-
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                        <p>Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
 
                         <a href="#">Read More</a>
-                </div>
+                    </div>
 
-                <!-- Card 3 -->
+                    <!-- Card 2 -->
 
-                <div class="curriculum-card card-3">
+                    <div class="curriculum-card card-2">
 
-                    <img src="assets/elementary.png" alt="">
+                        <img src="assets/middle.png" alt="">
 
-                    <h3>Elementary School</h3>
+                        <h3>Middle (10-16) Years</h3>
 
-                    <p>Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                        <p>Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
 
                         <a href="#">Read More</a>
+                    </div>
+
+                    <!-- Card 3 -->
+
+                    <div class="curriculum-card card-3">
+
+                        <img src="assets/elementary.png" alt="">
+
+                        <h3>Elementary School</h3>
+
+                        <p>Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+
+                        <a href="#">Read More</a>
+                    </div>
+
                 </div>
 
+                <!-- curriculum arrow link -->
+                <div class="curriculum-arrow">
+                    <i class="fa-solid fa-angle-left"></i>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
             </div>
-    
-            <!-- curriculum arrow link -->
-            <div class="curriculum-arrow"> 
-            <i class="fa-solid fa-angle-left"></i>
-            <i class="fa-solid fa-chevron-right"></i>
+        </section>
+
+
+        <!-- Our story Section -->
+
+        <section class="story-main-section">
+            <div class="story-container">
+                <h1>Our story</h1>
+
+                <div class="story-content">
+                    <!-- Left side story card -->
+                    <!-- Story card 1 -->
+                    <div class="story-card">
+                        <div class="story-card-1">
+                            <div class="innertext-content innertext-content-1">
+                                <p>November 19, 2019</p>
+                            </div>
+                            <div class="story-card-1-imageContent">
+                                <img src="assets/story-1.png" alt="">
+                            </div>
+
+                            <div class="story-card-1-textContent">
+                                <h3>A fun toddler coloring training on
+                                    classroom</h3>
+                                <p>Beautiful branding for changes by Never Now in Australia.
+                                    changes is a platform for open discussion in an inclusive and
+                                    collaborative environment, providing the...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <!-- Right side story card -->
+
+
+                    <div class="rightSide-storyCard">
+                        <!-- Story card 2 -->
+
+
+                        <div class="story-card">
+                            <div class="story-card-2">
+                                <div class="innertext-content innertext-content-grid innertext-content-grid-1">
+                                    <p>November 19, 2019</p>
+                                </div>
+                                <div class="story-card-2-imageContent">
+                                    <img src="assets/story-2.png" alt="">
+                                </div>
+
+                                <div class="story-card-2-textContent">
+                                    <h3>Summer math & literacy
+                                        centres for kids</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Story card 3 -->
+
+                        <div class="story-card">
+                            <div class="story-card-2">
+                                <div class="innertext-content innertext-content-grid innertext-content-grid-2">
+                                    <p>November 19, 2019</p>
+                                </div>
+                                <div class="story-card-2-imageContent">
+                                    <img src="assets/story-5.png" alt="">
+                                </div>
+
+                                <div class="story-card-2-textContent">
+                                    <h3>Find out if a school fits the
+                                        family’s needs</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Story card 4 -->
+
+                        <div class="story-card">
+                            <div class="story-card-2">
+                                <div class="innertext-content innertext-content-grid innertext-content-grid-3">
+                                    <p>November 19, 2019</p>
+                                </div>
+                                <div class="story-card-2-imageContent">
+                                    <img src="assets/story-3.png" alt="">
+                                </div>
+
+                                <div class="story-card-2-textContent">
+                                    <h3>Classroom management techniques for new tutors</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Story card 5 -->
+
+                        <div class="story-card">
+                            <div class="story-card-2">
+                                <div class="innertext-content innertext-content-grid 
+                                innertext-content-grid-4">
+                                    <p>November 19, 2019</p>
+                                </div>
+                                <div class="story-card-2-imageContent">
+                                    <img src="assets/story-4.png" alt="">
+                                </div>
+
+                                <div class="story-card-2-textContent">
+                                    <h3>Conversation rhymes
+                                        improve kids listening</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hero-button"><button class="button-2">View All</button></div> 
             </div>
         </section>
     </main>
