added some designn in our stories section for mobile screen

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <section class="story-main-section">
             <div class="story-container">
-                <h1>Our story</h1>
+                <h1>Our stories</h1>
 
                 <div class="story-content">
                     <!-- Left side story card -->
@@ -238,7 +238,7 @@
                     </div>
                 </div>
 
-                <div class="hero-button"><button class="button-2">View All</button></div> 
+                <div class="hero-button story-button"><button class="button-2">View All</button></div> 
             </div>
         </section>
     </main>
