--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 </div>
 
                                 <div class="story-card-2-textContent">
-                                    <h3>Classroom management techniques for new tutors</h3>
+                                    <h3> management techniques for new tutors</h3>
                                 </div>
                             </div>
                         </div>
