add footer section for both dekstop and mobile screen

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <h2><span class="span-empowering">Empowering</span> <br>
                     students from small <br>
                     age <span class="span-towards">towards vision</span></h2>
-                <p>With the courage, Confidence, Creativity and Compassion to make <br class="hero-p-br">
-                    their Unique Contribution in a Diverse and Dynamic World.</p>
+                <p>We nurture every child’s potential, building a strong foundation <br class="hero-p-br">
+                    for lifelong learning and success.For all himself,for the environment,for the society.</p>
                 <div class="hero-button"><button class="button-2">Enroll Now</button></div>
             </div>
 
@@ -80,9 +80,7 @@
 
                         <h3>Kinder (3-6) Years</h3>
 
-                        <p>Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p>Our Kindergarten program for ages 3-6 is a nurturing space where learning meets play. </p>
 
                         <a href="#">Read More</a>
                     </div>
@@ -95,9 +93,7 @@
 
                         <h3>Middle (10-16) Years</h3>
 
-                        <p>Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p>Our Middle School program for ages 10-16 is designed to shape young minds into confident, critical thinkers.</p>
 
                         <a href="#">Read More</a>
                     </div>
@@ -110,9 +106,7 @@
 
                         <h3>Elementary School</h3>
 
-                        <p>Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p>Where children build a strong academic foundation while exploring their creativity and developing social skills.</p>
 
                         <a href="#">Read More</a>
                     </div>
@@ -212,7 +206,7 @@
                                 </div>
 
                                 <div class="story-card-2-textContent">
-                                    <h3> management techniques for new tutors</h3>
+                                    <h3>Management techniques for new tutors</h3>
                                 </div>
                             </div>
                         </div>
@@ -238,10 +232,47 @@
                     </div>
                 </div>
 
-                <div class="hero-button story-button"><button class="button-2">View All</button></div> 
+                <div class="hero-button story-button"><button class="button-2">View All</button></div>
             </div>
         </section>
     </main>
+
+    <!-- Footer section start from here -->
+
+    <footer>
+        <section class="footer-innerSection">
+            <div class="footer-logoContent">
+                <div class="footer-logo">
+                    <img src="assets/logo.png" alt="loading">
+                    <h2>Primary <br>
+                        <span class="span-logo">Hero's</span>
+                    </h2>
+                </div>
+                <p>Dedicated to nurturing young minds in a safe, inclusive, and engaging environment. Located in the heart of Springfield, we strive to inspire a lifelong love for learning, creativity, and community.</p>
+            </div>
+
+
+            <div class="footer-aboutContent">
+
+                <h2>About School</h2>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Facilities</a>
+                <a href="#">Admission</a>
+            </div>
+
+
+
+            <div class="footer-keepTouchContent">
+
+                <h2>Keep In Touch</h2>
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/fb.png" alt="">
+                <img src="assets/google+.png" alt="">
+                <img src="assets/twitter.png" alt="">
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
