adjusted image of grid container

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="innertext-content innertext-content-grid innertext-content-grid-1">
                                     <p>July 24, 2020</p>
                                 </div>
-                                <div class="story-card-2-imageContent">
+                                <div class="story-card-2-imageContent story-images-rightsLeft">
                                     <img src="assets/story-2.png" alt="">
                                 </div>
 
@@ -183,7 +183,7 @@
                                 <div class="innertext-content innertext-content-grid innertext-content-grid-2">
                                     <p>March 19, 2019</p>
                                 </div>
-                                <div class="story-card-2-imageContent">
+                                <div class="story-card-2-imageContent story-images-rightsLeft">
                                     <img src="assets/story-5.png" alt="">
                                 </div>
 
@@ -201,7 +201,7 @@
                                 <div class="innertext-content innertext-content-grid innertext-content-grid-3">
                                     <p>April 19, 2018</p>
                                 </div>
-                                <div class="story-card-2-imageContent">
+                                <div class="story-card-2-imageContent story-images-rightsLeft">
                                     <img src="assets/story-3.png" alt="">
                                 </div>
 
@@ -219,7 +219,7 @@
                                 innertext-content-grid-4">
                                     <p>August 19, 2019</p>
                                 </div>
-                                <div class="story-card-2-imageContent">
+                                <div class="story-card-2-imageContent story-images-rightsLeft">
                                     <img src="assets/story-4.png" alt="">
                                 </div>
 
